@@ -9,6 +9,7 @@ export(EXTID2TERMID)
 export(infoContentMethod)
 exportMethods(plot)
 exportMethods(setReadable)
+exportMethods(show)
 exportMethods(sim)
 exportMethods(summary)
 export(TERM2NAME)
